Don't paint floating views unless the root view for the repaint is floating. This ensures that if we paint a window under a transient, the actual window contents are painted and not the transient's contents. Fix for new view manager bug 69346. r=kmcclusk, sr=attinasi